--- a/JS_OC_URL/JS_OC_URL/MainViewController.xib
+++ b/JS_OC_URL/JS_OC_URL/MainViewController.xib
@@ -1,8 +1,12 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <deployment version="2048" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MainViewController">
@@ -12,33 +16,32 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gAc-HV-C57">
-                    <rect key="frame" x="90" y="169" width="141" height="30"/>
+                <button opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gAc-HV-C57">
+                    <rect key="frame" x="116.5" y="169" width="142" height="30"/>
                     <state key="normal" title="UIWebView 拦截URL"/>
                     <connections>
                         <action selector="btnClick1:" destination="-1" eventType="touchUpInside" id="wgl-EI-F7U"/>
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5ad-vQ-Hfm">
-                    <rect key="frame" x="85" y="248" width="150" height="30"/>
+                    <rect key="frame" x="112" y="248" width="151" height="30"/>
                     <state key="normal" title="WKWebView 拦截URL"/>
                     <connections>
                         <action selector="btnClick2:" destination="-1" eventType="touchUpInside" id="JQc-Bz-S6l"/>
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="gAc-HV-C57" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="1ts-Sy-f9K"/>
                 <constraint firstItem="gAc-HV-C57" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="169" id="4SR-Cn-IUQ"/>
                 <constraint firstItem="5ad-vQ-Hfm" firstAttribute="top" secondItem="gAc-HV-C57" secondAttribute="bottom" constant="49" id="hy6-AA-i0s"/>
                 <constraint firstItem="5ad-vQ-Hfm" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="rr0-L2-lff"/>
             </constraints>
-            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
-            <point key="canvasLocation" x="247" y="393"/>
+            <point key="canvasLocation" x="-39.200000000000003" y="39.130434782608695"/>
         </view>
     </objects>
 </document>
